--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang=”en”>
    <head>
-      <title>Centering an image in HTML using the Style Attribute</title>
+      <title>My finger slipped</title>
    </head>
    <body>
-      <h1>Aligning an Image in center</h1>
-      <p>In this example, the image is wrapped in a block-type element, for ex. a div tag. The div is styled with the text-align property to center the image below. </p>
-      <!--Centered Image Start-->
+
       <div style="text-align: center;">
-         <img width="400" src="https://cdn.pixabay.com/photo/2017/02/05/00/19/web-design-2038872__340.jpg">
+         <img width="400" src="JackyFoxButt.webp">
       </div>
-      <!--Centered Image End-->
-      <p>This is the simplest but most limited method.</p>
+
    </body>
 </html>
 
